# imas_sc_api

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  manage.py  openapi.yaml  pyproject.toml  uwsgi.ini
api/: urls.py  wsgi.py
api/card/: urls.py
api/card/produce/: serializer.py  urls.py  views.py
api/card/support/: pagination.py  serializer.py  views.py
api/cartoon/: pagination.py  serializer.py  views.py
api/character/: serializer.py  urls.py  views.py
api/idol/: serializer.py  views.py
api/settings/: __init__.py  debug.py  default.py  docker.py
api/unit/: serializer.py  urls.py  views.py
data/: admin.py  models.py
data/admin/: __init__.py  cartoon.py  idol.py  produce_card.py  support_card.py  unit.py
data/models/: cartoon.py  character.py  idol.py  produce_card.py  support_card.py  unit.py
docker/: docker-compose.yml
docker/app/: Dockerfile  requirements.txt
sql/: create_table.sql  data.sql
