[tool.poetry]
name = "imas_sc_api"
version = "0.1.0"
description = "THE IDOLM@STER SHINY COLORS DATA API"
authors = ["Mutsuki Kimuraya <sondessein@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "~3.1"
djangorestframework = "~3.11"
django-cors-headers = "~3.2"
mysqlclient = "~2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
